--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
 }
 
 #primary-nav {
-  background-color #343a40;
+  background-color: #343a40;
 }
 
 .navbar-nav > li > .dropdown-menu { background-color: #343a40; }
