--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,13 @@ body {
 }
 
 #primary-nav {
-  background-color: #343a40;
+  background-color: #212529;
 }
 
-.navbar-nav > li > .dropdown-menu { background-color: #343a40; }
+.navbar-nav > li > .dropdown-menu { background-color: #212529; }
 
 .navbar-text,
 .navbar-brand,
-.nav-link,
-.nav-link.active {
+.nav-link {
   color:#fff;
 }
