--- a/styles.css
+++ b/styles.css
@@ -15,5 +15,5 @@ body {
   color:#fff;
 }
 */
-.navbar .nav-item.dropdown {color:#fff;}
+.navbar .nav-item.dropdown-item:hover {color:#fff;}
 .navbar .nav-item.dropdown:hover .dropdown-menu { background-color: #1a6da5; }
