--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ body {
 
 .navbar-nav > li > .dropdown-menu { background-color: #212529; }
 
+.nav-item.dropdown .dropdown-item {
+  color:fff;
+}
+
 .nav-item.dropdown .dropdown-item:active {
     background-color: white !important;
 }
