--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,9 @@ body {
 .navbar-nav > li > .dropdown-menu { background-color: #212529; }
 
 .nav-item.dropdown .dropdown-item {
-  color:fff;
+   background-color: white !important;
 }
 
 .nav-item.dropdown .dropdown-item:active {
-    background-color: white !important;
+    background-color: red !important;
 }
