--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,6 @@ body {
 .nav-item.dropdown .dropdown-item:hover {
     background-color: #f8f9fa !important;
 }
+.nav-item.dropdown .dropdown-item:active {
+    background-color: #red !important;
+}
