--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,12 @@ body {
 .navbar-nav > li > .dropdown-menu { background-color: #212529; }
 
 .nav-item.dropdown .dropdown-item {
-   background-color: white !important;
+   background-color: #212529 !important;
 }
 
 .nav-item.dropdown .dropdown-item:hover {
-    background-color: #f8f9fa !important;
+    background-color: white !important;
 }
 .nav-item.dropdown .dropdown-item:active {
-    background-color: #red !important;
+    background-color: red !important;
 }
