--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
 
 .nav-item.dropdown .dropdown-item {
    background-color: #212529 !important;
+   color: white !important;
 }
 
 .nav-item.dropdown .dropdown-item:hover {
