--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
 
 .nav-item.dropdown .dropdown-item:hover {
     background-color: #f8f9fa !important;
+    color: #212529 !important;
 }
 .nav-item.dropdown .dropdown-item:active {
     background-color: red !important;
